--- a/jam-gacor-pragmatic.html
+++ b/jam-gacor-pragmatic.html
@@ -130,7 +130,7 @@
 
   <section class='n-container m-b-normal'>
     <table style="width: 100%;">
-      <thead><tr><th colspan="3" style ="font-size: 20px;color:#e19909;padding-bottom: 20px;">INFORMASI SITUS BOLA TERPERCAYA</th></tr></thead>
+      <thead><tr><th colspan="3" style ="font-size: 20px;color:#e19909;padding-bottom: 20px;">INFORMASI SITUS RESMI TERPERCAYA</th></tr></thead>
       <tbody>
         <tr>
           <td>Situs Rekomendasi Terpercaya</td>
