saat-tepat-main-mahjong-ways.html

--- a/saat-tepat-main-mahjong-ways.html
+++ b/saat-tepat-main-mahjong-ways.html
@@ -21,9 +21,9 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="Login Asiabetking di sini. Daftar akun gacor Asiabetking resmi">
     <meta property="og:image" content="https://pub-efdd63b5499e4ee9b08cdbb7e54c6ac8.r2.dev/GARANSI-SLOT-ASIABETKING.webp">
-    <meta property="og:url" content="https://asiabking-amp.blogspot.com/">
-    <link rel="canonical" href="https://ourbusinessnews.com/" />
-    <link rel="amphtml" href="https://asiabking-amp.blogspot.com/?m=1/"/>
+    <meta property="og:url" content="https://jakartabarat-news.github.io/News/saat-tepat-main-mahjong-ways.html">
+    <link rel="canonical" href="https://jakartabarat-news.github.io/News/saat-tepat-main-mahjong-ways.html" />
+    <link rel="amphtml" href="https://jakartabarat-news.github.io/News/saat-tepat-main-mahjong-ways.html"/>
     <link rel="shortcut icon" type="image/x-icon" href="https://lbstatic.winwinwin168.net/media/images/yBAGcd9tfe7NLu7DLRIB.png">
     <link rel="apple-touch-icon" href="https://lbstatic.winwinwin168.net/media/images/yBAGcd9tfe7NLu7DLRIB.png">
     <link rel="icon" type="image/x-icon" href="https://lbstatic.winwinwin168.net/media/images/yBAGcd9tfe7NLu7DLRIB.png">
