--- a/jam-hoki-main-koi-gate.html
+++ b/jam-hoki-main-koi-gate.html
@@ -21,9 +21,9 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="Login Asiabetking di sini. Daftar id gacor Asiabetking resmi">
     <meta property="og:image" content="https://pub-efdd63b5499e4ee9b08cdbb7e54c6ac8.r2.dev/GARANSI-SLOT-ASIABETKING.webp">
-    <meta property="og:url" content="https://kabarjakarta.github.io/news/waktu-gacor-starlight-princess.html">
-    <link rel="canonical" href="https://kabarjakarta.github.io/news/waktu-gacor-starlight-princess.html" />
-    <link rel="amphtml" href="https://kabarjakarta.github.io/news/waktu-gacor-starlight-princess.html"/>
+    <meta property="og:url" content="https://jakartabarat-news.github.io/News/jam-hoki-main-koi-gate.html">
+    <link rel="canonical" href="https://jakartabarat-news.github.io/News/jam-hoki-main-koi-gate.html" />
+    <link rel="amphtml" href="https://jakartabarat-news.github.io/News/jam-hoki-main-koi-gate.html"/>
     <link rel="shortcut icon" type="image/x-icon" href="https://lbstatic.winwinwin168.net/media/images/yBAGcd9tfe7NLu7DLRIB.png">
     <link rel="apple-touch-icon" href="https://lbstatic.winwinwin168.net/media/images/yBAGcd9tfe7NLu7DLRIB.png">
     <link rel="icon" type="image/x-icon" href="https://lbstatic.winwinwin168.net/media/images/yBAGcd9tfe7NLu7DLRIB.png">
