--- a/terungkap-pola-scatter-hitam-mahjong-wins.html
+++ b/terungkap-pola-scatter-hitam-mahjong-wins.html
@@ -163,12 +163,12 @@
             "@context": "https://schema.org/",
             "@type": "BreadcrumbList",
             "itemListElement": [{
-              "@type": "NewsArticle",
+              "@type": "ListItem",
               "position": 1,
               "name": "Home",
               "item": "https://jakartabarat-news.github.io/News/terungkap-pola-scatter-hitam-mahjong-wins"
             }, {
-              "@type": "NewsArticle",
+              "@type": "ListItem",
               "position": 2,
               "name": "jakartabarat-news",
               "item": "https://jakartabarat-news.github.io/News/terungkap-pola-scatter-hitam-mahjong-wins"
