--- a/pola-rahasia-mahjong-ways.html
+++ b/pola-rahasia-mahjong-ways.html
@@ -163,12 +163,12 @@
             "@context": "https://schema.org/",
             "@type": "BreadcrumbList",
             "itemListElement": [{
-              "@type": "ItemList",
+              "@type": "ListItem",
               "position": 1,
               "name": "Home",
               "item": "https://jakartabarat-news.github.io/News/pola-rahasia-mahjong-ways"
             }, {
-              "@type": "ItemList",
+              "@type": "ListItem",
               "position": 2,
               "name": "jakartabarat-news",
               "item": "https://jakartabarat-news.github.io/News/pola-rahasia-mahjong-ways"
